client/src/app.scss
@import "variables";
@import "dialog";
@import "gist-editor";

html {
  font-size: 14px;
  line-height: 1.5;
}

@media (max-width: $tiny - .02) {
  html {
    font-size: 13px;
  }
}

.d-block {
  display: block !important;
}

.d-small {
  @media (min-width: $small) {
    display: none !important;
  }
}

.d-small-hide {
  @media (max-width: $small - .02) {
    display: none !important;
  }
}

.d-tiny {
  @media (min-width: $tiny) {
    display: none !important;
  }
}

.d-tiny-hide {
  @media (max-width: $tiny - .02) {
    display: none !important;
  }
}

.ml-0 {
  margin-left: 0 !important;
}

.ml {
  margin-left: .25rem !important;
}

.ml-2 {
  margin-left: .5rem !important;
}

.ml-3 {
  margin-left: .75rem !important;
}

.ml-auto {
  margin-left: auto !important;
}

.mr-0 {
  margin-right: 0 !important;
}

.mr {
  margin-right: .25rem !important;
}

.mr-2 {
  margin-right: .5rem !important;
}

.mr-3 {
  margin-right: .75rem !important;
}

.mr-auto {
  margin-right: auto !important;
}

.mt-0 {
  margin-top: 0 !important;
}

.mt {
  margin-top: .25rem !important;
}

.mt-2 {
  margin-top: .5rem !important;
}

.mt-3 {
  margin-top: .75rem !important;
}

.mb-0 {
  margin-bottom: 0 !important;
}

.mb {
  margin-bottom: .25rem !important;
}

.mb-2 {
  margin-bottom: .5rem !important;
}

.mb-3 {
  margin-bottom: .75rem !important;
}

.pl {
  padding-left: .25rem !important;
}

.pl-2 {
  padding-left: .5rem !important;
}

.pl-3 {
  padding-left: .75rem !important;
}

.pr {
  padding-right: .25rem !important;
}

.pr-2 {
  padding-right: .5rem !important;
}

.pr-3 {
  padding-right: .75rem !important;
}

.float-left {
  float: left;
}

.float-right {
  float: right;
}

.w100 {
  width: 100% !important;
}

.app {
  background-color: $gray-900;
  color: $white;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  user-select: none;
}

.selectable {
  user-select: auto;
}

.spinner {
  display: block;
  text-align: center;
  padding: 1rem;
  color: $cyan-dark;
  overflow-y: auto;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  user-select: auto;

  .fa-spin {
    font-size: 4rem;
  }
}

.app-top-bar {
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-wrap: nowrap;
  background-color: $gray-800;
  // border-bottom: 2px solid $gray-1000;

  .app-buttons {
    flex: 0 1 auto;
    margin: .5rem .25rem;
    display: flex;
    flex-wrap: nowrap;
    align-items: center;

    > .fas, > .fab, > .far {
      font-size: 1.6rem;
      cursor: pointer;
      margin: 0 .25rem;
    }

    img {
      cursor: pointer;
      width: 1.6rem;
      height: 1.6rem;
      margin: 0 .25rem;
    }
  }
}

.app-content {
  flex: 1 1 auto;
  display: flex;
  position: relative;
  align-items: stretch;

  .app-side-bar {
    position: relative;
    flex: 0 0 auto;
    display: flex;
    align-items: stretch;
    flex-direction: column;
    z-index: 100;

    @media (max-width: $small - .02) {
      background-color: $gray-800;
      position: absolute;
      top: 0;
      bottom: 0;
      left: -320px;
      width: 320px !important;
      border-right: 0;
      transition: left 200ms ease-in-out;

      &.show-side-bar {
        left: 0;
      }
    }
  }

  .app-editors {
    position: relative;
    flex: 0 0 auto;
    display: flex;
    align-items: stretch;
    flex-direction: column;
    z-index: 3;

    @media (max-width: $tiny - .02) {
      display: none;
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      width: auto !important;

      &.show-editors {
        display: flex;
      }
    }

    @media (max-width: $small - .02) and (min-width: $tiny) {
      &.sole-panel {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        width: auto !important;

        .panel-resizer {
          display: none;
        }
      }

      &.hide-editors {
        display: none;
      }
    }
  }

  .app-browser-window {
    flex: 1 1 0;
    display: flex;
    align-items: stretch;
    flex-direction: column;
    z-index: 2;

    @media (max-width: $tiny - .02) {
      display: none;
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;

      &.show-browser-window {
        display: flex;
      }
    }

    @media (max-width: $small - .02) and (min-width: $tiny) {
      &.sole-panel {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        width: auto !important;
      }

      &.hide-browser-window {
        display: none;
      }
    }
  }
}

.panel-resizer {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: 4px;
  z-index: 2;
  cursor: ew-resize;
  background-color: $gray-800;

  &:hover {
    transition: transform 150ms ease;
    transform: scaleX(2);
  }

  &.panel-resizer-horizontal {
    top: -1px;
    height: 4px;
    width: unset;
    left: 0;
    right: 0;
    bottom: unset;
    cursor: ns-resize;

    &:hover {
      transform: scaleY(2);
    }
  }
}
/* ... */

